--- a/detail.html
+++ b/detail.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
+            <meta http-equiv="content-type" charset="utf-8">
+
+            <link rel="stylesheet" type="text/css" href="index.css">
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script>
@@ -421,8 +424,17 @@ a:active {
 	</head>
 
 	<body>
-		<div id="header">
-		</div>
+        <div id="index-contents">
+                <!--全ページ共通のヘッダー部分(固定する)-->
+                <div id="top_header" class="boxlist" style="height: 80px;">
+                    <div id="header_logo">
+                        <img src="image/logo.png" alt="ロゴ" style="height: 40px;width: 100px;" class="centerpos">
+                        <div id="user_info">
+                            <p id="name">Hattori</p>
+                            <img src="image/face/99.png" class="circle" alt="アイコン">
+                        </div>
+                    </div>
+                </div>
 		<div id="detail">
 
 			<img src="" class="detail_logo" id="stickerImage">
@@ -492,7 +504,8 @@ a:active {
 				</a>
 				<p>ユーザ４</p>
 			</div>
-		</div>
+        </div>
+        </div>
 		<!--JavaScript at end of body for optimized loading-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 	</body>
