--- a/detail.html
+++ b/detail.html
@@ -453,7 +453,7 @@ a:active {
 			<p id="stickerDescription" class="note"></p>
 -->
 		</div>
-		<p class="eachtitle">取得者</p>
+		<p class="eachtitle">所持ユーザー</p>
 		<div id="users" class="row">
 			<div id="other01" class="user col s3">
 				<a href="./mypage.html">
@@ -481,27 +481,27 @@ a:active {
 			</div>
 			<div id="other01" class="user col s3 circle">
 				<a href="./mypage.html">
-					<img src="./image/face/1.png" class="sticker_img circle">
+					<img src="./image/face/5.png" class="sticker_img circle">
 				</a>
-				<p>ユーザ１</p>
+				<p>ユーザ5</p>
 			</div>
 			<div id="other03" class="user col s3 circle">
 				<a href="./mypage.html">
-					<img src="./image/face/2.png" class="sticker_img circle">
+					<img src="./image/face/6.png" class="sticker_img circle">
 				</a>
-				<p>ユーザ２</p>
+				<p>ユーザ6</p>
 			</div>
 			<div id="other04" class="user col s3 circle">
 				<a href="./mypage.html">
-					<img src="./image/face/3.png" class="sticker_img circle">
+					<img src="./image/face/7.png" class="sticker_img circle">
 				</a>
-				<p>ユーザ３</p>
+				<p>ユーザ7</p>
 			</div>
 			<div id="other05" class="user col s3">
 				<a href="./mypage.html">
-					<img src="./image/face/4.png" class="sticker_img circle">
+					<img src="./image/face/8.png" class="sticker_img circle">
 				</a>
-				<p>ユーザ４</p>
+				<p>ユーザ8</p>
 			</div>
         </div>
         </div>
