--- a/detail.html
+++ b/detail.html
@@ -465,49 +465,49 @@ a:active {
 				<a href="./mypage.html">
 					<img src="./image/face/1.png" class="sticker_img circle">
 				</a>
-				<p>ユーザ１</p>
+				<p>Lian</p>
 			</div>
 			<div id="other03" class="user col s3 circle">
 				<a href="./mypage.html">
 					<img src="./image/face/2.png" class="sticker_img circle">
 				</a>
-				<p>ユーザ２</p>
+				<p>Antony</p>
 			</div>
 			<div id="other04" class="user col s3 circle">
 				<a href="./mypage.html">
 					<img src="./image/face/3.png" class="sticker_img circle">
 				</a>
-				<p>ユーザ３</p>
+				<p>Makkatony</p>
 			</div>
 			<div id="other05" class="user col s3 circle">
 				<a href="./mypage.html">
 					<img src="./image/face/4.png" class="sticker_img circle">
 				</a>
-				<p>ユーザ４</p>
+				<p>Aoi</p>
 			</div>
 			<div id="other01" class="user col s3 circle">
 				<a href="./mypage.html">
 					<img src="./image/face/5.png" class="sticker_img circle">
 				</a>
-				<p>ユーザ5</p>
+				<p>Kanae</p>
 			</div>
 			<div id="other03" class="user col s3 circle">
 				<a href="./mypage.html">
 					<img src="./image/face/6.png" class="sticker_img circle">
 				</a>
-				<p>ユーザ6</p>
+				<p>Rika</p>
 			</div>
 			<div id="other04" class="user col s3 circle">
 				<a href="./mypage.html">
 					<img src="./image/face/7.png" class="sticker_img circle">
 				</a>
-				<p>ユーザ7</p>
+				<p>Mayu</p>
 			</div>
 			<div id="other05" class="user col s3">
 				<a href="./mypage.html">
 					<img src="./image/face/8.png" class="sticker_img circle">
 				</a>
-				<p>ユーザ8</p>
+				<p>Ryota</p>
 			</div>
         </div>
         </div>
